finished course section

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,7 +1,7 @@
 html{
   font-size: 18px;
-  font-family: 'Times New Roman', sans-serif;
-  color: #6480f3;
+  font-family: 'Raleway', sans-serif;
+  color: #1e379e;
 }
 
 header{
@@ -24,8 +24,8 @@ header .top{
   padding-left: .25rem;
 }
 .logo img{
-  width: 4rem;
-  height: 4rem;
+  width: 3rem;
+  height: 3rem;
 }
 
 nav ul a{
@@ -45,7 +45,8 @@ nav ul a{
 .banner-box{
   background-color: #d4cfcf;
   background-size: cover;
-  width: 100%;
+  max-width: 100%;
+  border: #c7c8cc solid;
 }
 .banner-content{
   display: flex;
@@ -61,7 +62,7 @@ nav ul a{
   max-width: 30%;
   align-items: center;
   justify-content: center;
-  margin-left: 24px;
+  margin-left: 62px;
 }
 .banner-text h1{
   font-size:45px;
@@ -82,17 +83,17 @@ nav ul a{
   color: #6480f3;
 }
 .main-box{
-  width: 100%;
+  max-width: 100%;
 }
 .main-content{
   display: flex;
-  align-items: center;
-}
-.main-content img{
-  width: 60%;
 }
 .main-left{
+  max-width: 60%;
   padding: 32px 24px;
+}
+.main-left img{
+  width: 97%;
 }
 .main-left h2{
   font-size: 2.1rem;
@@ -100,14 +101,88 @@ nav ul a{
 .main-left p{
   color: gray;
 }
-.main-left .text{
-  max-width: 60%;
-}
+
 .text p{
   font-weight: lighter;
 }
 .main-left .Emanuel{
   margin: 36px 0;
-  font-size: 14px;
+  font-size: 16px;
   color: #6480f3;
+}
+.information-box{
+  width: 40%;
+  border: #c7c8cc solid;
+  background-color: white;
+  border-top: none;
+}
+.box-outline{
+  padding: 16px 0;
+}
+.info1-box{
+  display: flex;
+  flex-direction: row;
+  border: #c7c8cc solid;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  align-items: center;
+}
+.info1-box img{
+  height: auto;
+  width: 40%;
+  padding: 16px 16px;
+
+}
+.info1-box .infotext{
+  /*padding-left: 24px;*/
+  width: 65%;
+}
+.infotext p{
+  margin-top: 8px;
+}
+h4{
+  color: gray;
+}
+.datetime{
+  color: #8a8787;
+}
+.backgroundcolor{
+  background-color: #c7c8cc;
+}
+
+
+
+.course-boxes{
+  margin-top: 32px;
+  justify-content: space-between;
+  display: flex;
+  flex-wrap: wrap;
+}
+.main-course{
+  padding: 32px 72px;
+  background-color: #c7c8cc;
+}
+.main-course h1{
+  text-align: center;
+}
+.courses img{
+  width: 100%;
+}
+.courses{
+  flex-direction: column;
+  width: 32%;
+  background-color: white;
+  margin-top: 32px;
+}
+.course-details{
+  margin: 16px 16px;
+}
+.computer-art-column{
+  margin-bottom: 24px;
+}
+.paragraph-container{
+  font-size: 16px;
+  font-weight: normal;
+  color: #8a8787
 }
