--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -4,6 +4,14 @@ html{
   color: #1e379e;
 }
 
+p{
+  color: #8a8787;
+}
+
+h4{
+  color: gray;
+}
+
 header{
   width: 100%;
   height: 64px;
@@ -27,6 +35,16 @@ header .top{
   width: 3rem;
   height: 3rem;
 }
+.mobile-logo{
+  display: none;
+}
+
+@media only screen and (max-width:768){
+  .mobile-logo{
+    display: flex;
+  }
+}
+
 
 nav ul a{
   padding-left: 16px;
@@ -115,6 +133,7 @@ nav ul a{
   border: #c7c8cc solid;
   background-color: white;
   border-top: none;
+  border-bottom: none;
 }
 .box-outline{
   padding: 16px 0;
@@ -131,7 +150,7 @@ nav ul a{
 .info1-box img{
   height: auto;
   width: 40%;
-  padding: 16px 16px;
+  padding: 14px 16px;
 
 }
 .info1-box .infotext{
@@ -141,18 +160,15 @@ nav ul a{
 .infotext p{
   margin-top: 8px;
 }
-h4{
-  color: gray;
-}
+
 .datetime{
   color: #8a8787;
 }
-.backgroundcolor{
+.info1-box.backgroundcolor{
   background-color: #c7c8cc;
+  padding-bottom: 20px:
+
 }
-
-
-
 .course-boxes{
   margin-top: 32px;
   justify-content: space-between;
@@ -185,4 +201,50 @@ h4{
   font-size: 16px;
   font-weight: normal;
   color: #8a8787
+}
+.main-thesis{
+  padding: 32px 0;
+  border: #c7c8cc solid;
+  border-left: none;
+  border-right: none;
+}
+.main-thesis h1{
+  text-align: center;
+  border:
+}
+.thesis-boxes{
+  display: flex;
+  margin-top: 32px;
+}
+.video{
+  max-width: 60%;
+  padding: 0 24px;
+}
+.video video{
+  width: 100%;
+  height: auto;
+
+}
+.thesis-details{
+  max-width: 40%;
+}
+.fisma{
+  background-color: #c7c8cc;
+}
+.design{
+  display: flex;
+  align-items: center;
+}
+.pic{
+  height: auto;
+  padding: 16px;
+}
+.thesis-details .text{
+  padding-right: 16px;
+}
+footer{
+  margin: 16px 24px;
+  display: flex;
+  justify-content: space-between;
+  color: #8a8787;
 }
